styles/input.css
/* ... */
        @media (prefers-color-scheme: dark) {
            :root {
                --brand-color-1: #64a6b1;
                --brand-color-2: white;
                --accent-color-1: #000030;
                --accent-color-2: #ebd119;
                --framework-color: #151520;
                --paper-color: #1f2433;
            }
        }

        /** mappings **/
        html {
            --heading-color: var(--brand-color-2);
            --link-color: var(--brand-color-1);
            --meta-color: var(--brand-color-2);
            --text-color: var(--brand-color-2);

        }

        @media (prefers-color-scheme: dark) {
            html {
                --heading-color: white;
                --link-color: var(--brand-color-1);
                --meta-color: white;
                --text-color: #a8c5ce;
            }
        }

        /**
         * Light reset
         * ----------------------------------------------------------------
         */

        * {
            box-sizing: border-box;
        }

        html {
            min-width: 375px;
            font-family: var(--default-font-family);
            background-color: var(--paper-color);
            color: var(--text-color);
            overflow-x: hidden;
            overflow-y: scroll;
        }

        body {
            margin: 0;
            padding: 0;
            display: flex;
            align-items: center;
            justify-content: center;

        }

        h1, h2, h3, h4, h5, h6 {
            font-family: var(--accent-font-family);
            color: var(--heading-color);
            margin: 0;
            padding-bottom: 10px;
        }

        p {
            margin: 0;
        }

        a {
            text-decoration: none;
            color: inherit;
        }

        /**
         * Styled Content
         * ----------------------------------------------------------------
         */
        .content {
            font-family: var(--text-regular-font-family);
            font-size: var(--text-regular-font-size);
            font-weight: var(--text-regular-font-weight);
            letter-spacing: var(--text-regular-letter-spacing);
            line-height: var(--text-regular-line-height);
        }

        .content h1 {
            font-size: 2em;
        }

        .content h2 {
            font-size: 1.625em;
        }

        .content h2:not(:first-child) {
            margin-top: 1em;
        }

        .content h3 {
            font-size: 1.325em;
        }

        .content h3:not(:first-child) {
            margin-top: 1em;
        }

        .content h4 {
            font-size: 1.25em;
        }

        .content h4:not(:first-child) {
            margin-top: 1em;
        }

        .content h5 {
            font-size: 1.125em;
        }

        .content h5:not(:first-child) {
            margin-top: 1em;
        }

        .content h6 {
            font-size: 1em;
        }

        .content h6:not(:first-child) {
            margin-top: 1em;
        }

        .content p {
            margin-bottom: 1em;
        }

        .content ul,
        .content ol {
            margin-bottom: 1em;
        }

        .content a {
            color: var(--brand-color-1);
            border-bottom: 1px dashed;
        }

        .content hr {
            background-color: var(--framework-color);
            border: 0;
            height: 2px;
            margin: 1.5em 0;
        }

        .content blockquote {
            position: relative;
            padding: 2em;
            margin-left: 0;
            margin-right: 0;
            border-left: 0.25em solid var(--accent-color-1)
        }

        .content blockquote::before {
            content: " ";
            background-color: var(--accent-color-1);
            opacity: 0.1;
            position: absolute;
            z-index: -1;
            left: 0;
            top: 0;
            width: 100%;
            height: 100%;
        }
        .content img {
            max-width: 100%;
            height: auto;
        }

        .content input[type="email"],
        .content input[type="number"],
        .content input[type="username"],
        .content input[type="password"],
        .content input[type="search"],
        .content input[type="tel"],
        .content input[type="text"],
        .content input[type="date"],
        .content input[type="datetime"],
        .content input[type="datetime-local"],
        .content input[type="month"],
        .content input[type="week"],
        .content input[type="time"],
        .content select,
        .content textarea {
            padding: 0.25em;
            border: 2px solid var(--framework-color);
            font-family: var(--text-regular-font-family);
            font-size: var(--text-regular-font-size);
            font-weight: var(--text-regular-font-weight);
            color: var(--brand-color-1);
        }

        .content textarea {

        }

        .content legend {
            font-weight: var(--text-regular-font-weight-emphasis);
        }

        .content fieldset {
            border: 2px solid var(--framework-color);
            margin-bottom: 1.5em;
        }

        .content input[type="button"],
        .content input[type="submit"],
        .content input[type="reset"],
        .content button {
            background-color: transparent;
            color: var(--brand-color-1);
            border: 2px solid var(--brand-color-1);
            padding: var(--button-padding-vert) var(--button-padding-horz);
            font-family: var(--heading-small-font-family);
            font-size: var(--heading-small-font-size);
            font-weight: var(--heading-small-font-weight);
            letter-spacing: var(--heading-small-letter-spacing);
            display: inline-block;
        }

        /* fix margin collapse */
        .content *:last-child {
            margin-bottom: 0;
        }
/* ... */

